--- a/src/index.css
+++ b/src/index.css
@@ -6,31 +6,7 @@
 }
 html {
   font-family: "Cairo", sans-serif;
-}
-a{
-  text-decoration: none;
-  color: black;
-}
-.container{
-  padding: 0 20px;
-}
-nav ul {
-  display: flex;
-  justify-content: center;
-  background-color: blanchedalmond;
-  margin-block-start: 0;
-  padding: 16px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-nav ul li {
-  list-style: none;
-  margin-right: 16px;
-}
-
-nav ul li a {
-  color: #ff4154;
-  text-decoration: none;
+  text-align: center;
 }
 
 
